controls/C-0013/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0013-deny-resources-with-capability-to-run-as-root"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
    - expression: |
        object.kind == 'Pod' ? object.spec.containers
        : object.kind in ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'] ? object.spec.template.spec.containers
        : object.kind == 'CronJob' ? object.spec.jobTemplate.spec.template.spec.containers
        : []
      name: containers
    - expression: |
        object.kind == 'Pod' ? object.spec.securityContext
        : object.kind in ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'] ? object.spec.template.spec.securityContext
        : object.kind == 'CronJob' ? object.spec.jobTemplate.spec.template.spec.securityContext
        : {}
      name: podSecurityContext
  validations:
    - expression: >
        variables.containers.all(container,
          (
            has(container.securityContext) &&
            has(container.securityContext.allowPrivilegeEscalation) &&
            container.securityContext.allowPrivilegeEscalation == false
          ) &&
          (
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsNonRoot) &&
                container.securityContext.runAsNonRoot == true
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsNonRoot)
                ) &&
                (
                  has(variables.podSecurityContext) &&
                  has(variables.podSecurityContext.runAsNonRoot) &&
                  variables.podSecurityContext.runAsNonRoot == true
                )
              )
            ) ||
            (
              (
                has(container.securityContext) &&
                has(container.securityContext.runAsUser) &&
                container.securityContext.runAsUser != 0
              ) ||
              (
                (
                  !has(container.securityContext) || !has(container.securityContext.runAsUser)
                ) &&
                (
                  has(variables.podSecurityContext) &&
                  has(variables.podSecurityContext.runAsUser) &&
                  variables.podSecurityContext.runAsUser != 0
                )
              )
            )
          )
        )
      messageExpression: object.kind + "/" + object.metadata.name + " contains container/s which have the capability to run as root! (see more at https://kubescape.io/docs/controls/c-0013/)"
